# hardline

./: .gitignore  Cargo.toml  HARDLINE_MERGE_PLAN.md  MIGRATION.md  architecture-spec.md  check_coverage.sh  find_violations.py
.beads/: architecture-refactor.md
.beads/schemas/: hardline-20260311223119-0tllqsag.cue  hardline-20260311223119-1esfqzme.cue  hardline-20260311223119-2irctnlr.cue  hardline-20260311223119-33nc72yp.cue  hardline-20260311223119-3boke41c.cue  hardline-20260311223119-4q9m0nsu.cue  hardline-20260311223119-5bs93qfb.cue  hardline-20260311223119-6wwjbshl.cue  hardline-20260311223119-6zi0xpxw.cue  hardline-20260311223119-7i04dod6.cue  hardline-20260311223119-8mgv4h7v.cue  hardline-20260311223119-9sblnjft.cue  hardline-20260311223119-apv4i7bd.cue  hardline-20260311223119-ayzogm4f.cue  hardline-20260311223119-b1e5dtxr.cue  hardline-20260311223119-bnzb3io3.cue  hardline-20260311223119-by7i4j6l.cue  hardline-20260311223119-ceciimah.cue  hardline-20260311223119-cqbkcma7.cue  hardline-20260311223119-d1vac6ws.cue  hardline-20260311223119-d9mr8h1y.cue  hardline-20260311223119-ddn2fqoi.cue  hardline-20260311223119-e4fe1el3.cue  hardline-20260311223119-e9nljude.cue  hardline-20260311223119-erpjkutf.cue  hardline-20260311223119-erruqlze.cue  hardline-20260311223119-fbcojcsj.cue  hardline-20260311223119-fswmgfba.cue  hardline-20260311223119-fyjmodux.cue  hardline-20260311223119-gf46zhqd.cue  hardline-20260311223119-hizvc4ff.cue  hardline-20260311223119-ic1yjyqx.cue  hardline-20260311223119-ieyxrhxl.cue  hardline-20260311223119-iqwtkrkg.cue  (+128 more)
crates/beads/: Cargo.toml
crates/beads/src/: error.rs  lib.rs  types.rs
crates/beads/src/application/: mod.rs
crates/beads/src/domain/: bead_state.rs  events.rs  identifiers.rs  labels.rs  mod.rs  repository.rs  text_values.rs  value_objects.rs
crates/beads/src/domain/entities/: bead.rs
crates/beads/src/infrastructure/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: abs.rs  agent.rs  batch.rs  cat.rs  doctor.rs  mod.rs  rebase.rs  stash.rs  sync.rs  tag.rs  task.rs  task_types.rs  task_validation.rs  version.rs  wait.rs  workspace.rs
crates/core/: Cargo.toml
crates/core/benches/: bench_main.rs
crates/core/src/: agent.rs  architecture_boundaries.rs  checkpoint.rs  config.rs  config_property_tests.rs  conflict.rs  error.rs  fix.rs  jj.rs  jj_operation_sync.rs  json_tests.rs  lib.rs  lifecycle.rs  lock.rs  metadata.rs  recovery.rs  session_state.rs  session_state_tests.rs  types.rs  types_tests.rs  vcs.rs  watcher.rs
crates/core/src/beads/: invariant_tests.rs  issue.rs  mod.rs
crates/core/src/coordination/: conflict_resolutions.rs  locks.rs
crates/core/src/dag/: branch_dag.rs  mod.rs
crates/core/src/domain/: agent.rs  identifiers.rs  mod.rs
crates/core/src/domain/repository/: agent.rs  bead.rs  error.rs  in_memory.rs  mod.rs  session.rs  workspace.rs
crates/core/src/infrastructure/: chaos.rs  database.rs  database_types.rs  mod.rs  operation_log.rs
crates/core/src/output_jsonl/: mod.rs
crates/core/src/validation/: domain.rs
crates/core/src/validation/domain/: identifiers.rs
crates/core/tests/: properties.rs.broken
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
crates/queue/src/domain/: mod.rs  ports.rs
crates/queue/src/domain/entities/: mod.rs  queue_entry.rs
crates/queue/src/domain/events/: mod.rs  queue_event.rs
crates/queue/src/domain/state/: mod.rs
crates/queue/src/domain/tests/: mod.rs  ports_tests.rs
crates/queue/src/domain/value_objects/: mod.rs
crates/queue/src/infrastructure/: mod.rs  sqlite_migration.rs
crates/queue/tests/: adversarial_tests.rs
crates/scenarios/: Cargo.toml
crates/session/: Cargo.toml
crates/session/src/: error.rs  lib.rs
crates/session/src/application/: session_service.rs
crates/session/src/domain/: bead.rs  events.rs  mod.rs  value_objects.rs  workspace.rs  workspace_state.rs
crates/session/src/domain/entities/: mod.rs  session.rs
crates/session/src/domain/events/: mod.rs
crates/session/src/domain/value_objects/: metadata.rs  mod.rs
crates/session/src/infrastructure/: migration.rs  mod.rs
crates/stack/: Cargo.toml
crates/stack/src/: error.rs  lib.rs
crates/stack/src/domain/: mod.rs
crates/stack/src/domain/entities/: stack.rs
crates/stack/src/engine/: mod.rs
crates/stack/src/github/: client.rs  pr.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/tui/src/app/: mod.rs
crates/tui/src/views/: ui.rs
crates/vcs/: Cargo.toml
crates/vcs/src/: lib.rs
crates/vcs/src/domain/traits/: mod.rs
crates/vcs/src/infrastructure/: git.rs  jj.rs
crates/vcs/src/vcs/: git.rs  mod.rs
crates/vcs/tests/: integration_tests.rs
mutants.out/: lock.json
scp-4b2/: .gitignore  .mutants.toml  MIGRATION_PLAN.md  adversarial_test.rs  check_errors.py  deny.toml  fuzz_vcs.sh  violations.txt
scp-4b2/crates/beads/: Cargo.toml
scp-4b2/crates/beads/src/: error.rs  lib.rs
scp-4b2/crates/beads/src/application/: mod.rs
scp-4b2/crates/beads/src/domain/entities/: mod.rs
scp-4b2/crates/beads/src/infrastructure/: mod.rs  repository.rs
scp-4b2/crates/scenarios/: Cargo.toml
scp-4b2/crates/scenarios/src/: lib.rs
scp-4b2/crates/scp-error/: Cargo.toml
scp-4b2/crates/snapshot/: Cargo.toml
scp-4b2/crates/snapshot/src/: error.rs  lib.rs
scp-4b2/crates/snapshot/src/domain/: mod.rs  snapshot.rs
scp-4b2/crates/snapshot/src/storage/: mod.rs
scp-4b2/crates/workspace/: Cargo.toml
scp-4b2/crates/workspace/src/: error.rs
scp-4b2/crates/workspace/src/application/: mod.rs
scp-4b2/crates/workspace/src/domain/entities/: mod.rs
scp-4b2/crates/workspace/src/domain/events/: mod.rs  workspace_event.rs
scp-4b2/crates/workspace/src/domain/state/: mod.rs
scp-4b2/crates/workspace/src/domain/value_objects/: mod.rs  workspace_name.rs  workspace_path.rs
scp-4b2/crates/workspace/src/infrastructure/: mod.rs  workspace_repository.rs
scp-4b2/crates/workspace/tests/: memory_leak_test.rs  using_tempfile.rs
scp-4b2/fuzz/: Cargo.toml
scp-4b2/fuzz/fuzz_targets/: fuzz_write_to_disk.rs
(+294 files in other folders)
