[package]
name = "scp-beads"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scp-core = { path = "../core" }
chrono = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
