[package]
name = "scp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "scp"
path = "src/main.rs"

[dependencies]
scp-core = { path = "../core" }

# CLI
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Time
chrono = { workspace = true }

# File system
directories = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
