[package]
name = "scp-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "scp-cli"
path = "src/main.rs"

[dependencies]
scp-core = { path = "../core" }

# CLI
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Time
chrono = { workspace = true }

# Regex
regex = "1.11"

# State
once_cell = "1.20"

# File system
directories = { workspace = true }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = { workspace = true }
