[package]
name = "scp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }

# Database
sqlx = { workspace = true }

# Time
chrono = { workspace = true }

# Collections
im = { workspace = true }
itertools = { workspace = true }
either = { workspace = true }
tap = { workspace = true }
petgraph = { workspace = true }

# VCS
jj-lib = { workspace = true }
git2 = { workspace = true }

# File system
directories = { workspace = true }
fs2 = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

# Parsing
regex = { workspace = true }

# Hex
hex = { workspace = true }
faster-hex = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
