[package]
name = "scp-queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scp-core = { path = "../core" }
serde = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
