[package]
name = "scp-queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scp-core = { path = "../core" }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
