[package]
name = "scp-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scp-core = { path = "../core" }
scp-workspace = { path = "../workspace" }
scp-beads = { path = "../beads" }
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test.workspace = true
proptest.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
