[package]
name = "scp-stack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scp-core = { path = "../core" }
scp-vcs = { path = "../vcs" }
gix = "0.78"
octocrab = "0.44"
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true
