[package]
name = "scp-vcs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scp-core = { path = "../core" }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
jj-lib = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
