[package]
name = "scp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3.14"

[dependencies.scp-core]
path = "../crates/core"

[[bin]]
name = "fuzz_session_name"
path = "fuzz_targets/fuzz_session_name.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_task_id"
path = "fuzz_targets/fuzz_task_id.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_write_to_disk"
path = "fuzz_targets/fuzz_write_to_disk.rs"
test = false
doc = false
bench = false
