[package]
name = "scp-beads"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scp-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

[dev-dependencies]
tokio-test.workspace = true
proptest.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
