[package]
name = "scenarios"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
reqwest = { workspace = true, features = ["json"] }
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
chrono.workspace = true
im.workspace = true
itertools.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true

[lints.rust]
unsafe_code = "forbid"

[features]
default = []
