[package]
name = "scp-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scp-core = { path = "../core" }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
